--- a/src/pages/Chat.css
+++ b/src/pages/Chat.css
@@ -221,7 +221,8 @@ body {
   min-width: 50px;
   padding: 10px;
   border-radius: 2px;
-  word-break: break-all;
+  word-wrap: break-word;
+  max-width: 80%;
 }
 
 .msg .user {
