Criando botão para Download do Chatbot Portátil

--- a/src/pages/Chat.css
+++ b/src/pages/Chat.css
@@ -505,3 +505,10 @@ textarea:focus {
     right: 10px;
   }
 }
+
+.download {
+  width: 50px;
+  float: right;
+  margin: 5px;
+  cursor: pointer;
+}
